# ast-surgeon

./: .gitignore  PLAN.md  README.md  pyproject.toml
.sovereign/: config.json
ast_surgeon/: __init__.py
ast_surgeon/cli/: main.py
ast_surgeon/components/chunker/: js_chunker.py  models.py
ast_surgeon/components/embeddings/: __init__.py  providers.py
ast_surgeon/components/sync/: manifest.py  watcher.py
ast_surgeon/components/tools/: file_tools.py
ast_surgeon/components/vectorstore/: chroma_store.py  pinecone_store.py
src/api/: __init__.py  server.py
src/cli/: __init__.py  main.py  session.py
src/components/agent/: __init__.py  checker.py  git_manager_agent.py  kg_agent.py  loop.py  main_orchestrator.py  models.py  orchestrator.py  planner.py  repair_agent.py  research_agent.py  router.py  security_agent.py  session_manager.py  subagent.py  synthesiser.py  system_info_agent.py
src/components/chunker/: __init__.py  dispatcher.py  python_chunker.py  text_chunker.py
src/components/embeddings/: __init__.py  pipeline.py  providers.py
src/components/memory/: __init__.py  coordinator.py  episodic_memory.py  session_manager.py  session_store.py  working_memory.py
src/components/sync/: __init__.py  indexer.py  manifest.py  watcher.py
src/components/tools/: __init__.py
src/components/vectorstore/: __init__.py  base.py  chroma_store.py  qdrant_store.py
src/evals/: __init__.py  harness.py
tests/: test_main_orchestrator.py  test_tools.py
