[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-code"
version = "0.3.0"
description = "Production-grade coding agent with AST-based codebase intelligence"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.21",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "qdrant-client>=1.7",
    "httpx>=0.27",
    "watchdog>=4.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
local-embed = ["sentence-transformers>=2.7"]
dev = ["pytest>=8.0", "pytest-asyncio"]

[project.scripts]
sovereign = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"