[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ast-surgeon"
version = "0.4.0"
description = "AST-based code chunking, embedding, and semantic search for codebases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.21",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "httpx>=0.27",
    "watchdog>=4.0",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5"]
qdrant = ["qdrant-client>=1.7"]
pinecone = ["pinecone>=5.0"]
local-embed = ["sentence-transformers>=2.7"]
all = [
    "chromadb>=0.5",
    "qdrant-client>=1.7",
    "pinecone>=5.0",
    "sentence-transformers>=2.7",
]
dev = ["pytest>=8.0", "pytest-asyncio"]

[project.scripts]
ast-surgeon = "ast_surgeon.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ast_surgeon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"